--- a/contact.html
+++ b/contact.html
@@ -8,25 +8,32 @@
             <div>
                 <h1 class="name">Andrew Berndt</h1>
                <div id="link">
-                <a class="link" href="index.html">About Me</a>
-                <a class="link" href="#">Portfolio</a>
-                <a class="link" href="#">Contact</a>
+                <a href="index.html">About Me</a>
+                <a>|</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a>|</a>
+                <a href="contact.html">Contact</a>
                </div>
             </div>
         </header>
         <br>
-    <div>
-        <h1 class="contact">Contact</h1>
+    <div class="contact">
+        <h2>Contact</h2>
         <form class="form">
             First Name: <Br>
-            <input type="text" name="First Name"><Br>
+            <input class="input" type="text" name="First Name"><Br><br>
             Last Name: <Br>
-            <input type="text" name="Last Name"><Br>
-            <input type="Submit" value="submit">
+            <input class="input" type="text" name="Last Name"><Br>
+                <br>
+            Message: <br>
+            <textarea class="message" type="text" name="Message"></textarea><Br>
+                <br>
+            <input class="button" type="Submit" value="Submit">
         </form>
         </section>
     </div>
-        <footer>
+        <footer class="footer">
+                <p class="copyright©">Copyright&copy;</p>
 
         </footer>
     </body>
