--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             <div>
                 <h1 class="name">Andrew Berndt</h1>
                  <div id="link">
-                    <a href="#">About Me</a>
-                    <a href="#">Portfolio</a>
+                    <a href="index.html">About Me</a>
+                    <a>|</a>
+                    <a href="portfolio.html">Portfolio</a>
+                    <a>|</a>
                     <a href="contact.html">Contact</a> 
                  </div>
              </div>
@@ -28,7 +30,7 @@
             </div>
         
         <footer class="footer">
-            <p class="copyright">Copyright</p>
+            <p class="copyright©">Copyright&copy;</p>
         </footer>
     
     </body>
