--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,11 @@
             <img class="img3" src="assets/images/project 3.jpg" alt="abstract3">
             <img class="img4" src="assets/images/project 4.jpg" alt="abstract4">
             <img class="img5" src="assets/images/project 5.jpg" alt="abstract5">
-            <div class="pic-name1">Profile 1</div>
-            <div class="pic-name2">Profile 2</div>
+            <div class="pic-name1">Project 1</div>
+            <div class="pic-name2">Project 2</div>
+            <div class="pic-name3">Project 3</div>
+            <div class="pic-name4">Project 4</div>
+            <div class="pic-name5">Project 5</div>
             </div>
             
         </div>
