--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header id="header">
+        <header class="header">
             <div>
                 <h1 class="name">Andrew Berndt</h1>
-               <div id="link">
+               <div class="link">
                 <a href="index.html">About Me</a>
-                <a>|</a>
+                <span>|</span>
                 <a href="portfolio.html">Portfolio</a>
-                <a>|</a>
+                <span>|</span>
                 <a href="contact.html">Contact</a>
                </div>
             </div>
