--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         
     </head>
     <body>
-        <header id="header">
+        <header class="header">
             <div>
                 <h1 class="name">Andrew Berndt</h1>
-                 <div id="link">
+                 <div class="link">
                     <a href="index.html">About Me</a>
-                    <a>|</a>
+                    <span>|</span>
                     <a href="portfolio.html">Portfolio</a>
-                    <a>|</a>
+                    <span>|</span>
                     <a href="contact.html">Contact</a> 
                  </div>
              </div>
