--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,14 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header id="header">
+        <header class="header">
             <div>
                 <h1 class="name">Andrew Berndt</h1>
-                 <div id="link">
+                 <div class="link">
                     <a href="index.html">About Me</a>
-                    <a>|</a>
+                    <span>|</span>
                     <a href="portfolio.html">Portfolio</a>
-                    <a>|</a>
+                    <span>|</span>
                     <a href="contact.html">Contact</a> 
                  </div>
              </div>
@@ -19,16 +19,16 @@
         <div class="portfolio">
             <h2 id="port-head">Portfolio</h2>
             <div class="overflow">
-            <img class="img1" src="assets/images/project 1.jpg" alt="abstract1">
-            <img class="img2" src="assets/images/project 2.jpg" alt="abstract2">
-            <img class="img3" src="assets/images/project 3.jpg" alt="abstract3">
-            <img class="img4" src="assets/images/project 4.jpg" alt="abstract4">
-            <img class="img5" src="assets/images/project 5.jpg" alt="abstract5">
-            <div class="pic-name1">Project 1</div>
-            <div class="pic-name2">Project 2</div>
-            <div class="pic-name3">Project 3</div>
-            <div class="pic-name4">Project 4</div>
-            <div class="pic-name5">Project 5</div>
+                <img id="img1" src="assets/images/project 1.jpg" alt="abstract1">
+                <img id="img2" src="assets/images/project 2.jpg" alt="abstract2">
+                <img id="img3" src="assets/images/project 3.jpg" alt="abstract3">
+                <img id="img4" src="assets/images/project 4.jpg" alt="abstract4">
+                <img id="img5" src="assets/images/project 5.jpg" alt="abstract5">
+                <div id="pic-name1">Project 1</div>
+                <div id="pic-name2">Project 2</div>
+                <div id="pic-name3">Project 3</div>
+                <div id="pic-name4">Project 4</div>
+                <div id="pic-name5">Project 5</div>
             </div>
             
         </div>
