--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     </head>
     <body>
         <header class="header">
